[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/scripts/JumpPlatform.gd" type="Script" id=1]
[ext_resource path="res://src/sprites/JumpTile/jumptile0.png" type="Texture" id=2]
[ext_resource path="res://src/sprites/JumpTile/jumptile1.png" type="Texture" id=3]
[ext_resource path="res://src/sprites/JumpTile/jumptile2.png" type="Texture" id=4]
[ext_resource path="res://src/sprites/JumpTile/jumptile3.png" type="Texture" id=5]
[ext_resource path="res://src/sprites/JumpPlatform/jumpplat1.png" type="Texture" id=6]
[ext_resource path="res://src/sprites/JumpPlatform/jumpplat2.png" type="Texture" id=7]
[ext_resource path="res://src/sprites/JumpPlatform/jumpplat3.png" type="Texture" id=8]
[ext_resource path="res://src/sprites/JumpPlatform/jumpplat4.png" type="Texture" id=9]
[ext_resource path="res://src/sprites/Light.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "effervescence",
"speed": 3.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "effervescence2",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.25, 0.625 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 47, 13 )

[node name="JumpPlatform" type="Area2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -14 )
frames = SubResource( 1 )
animation = "effervescence"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 20 )
scale = Vector2( 8, 8 )
shape = SubResource( 2 )

[node name="JumpDetector" type="Area2D" parent="."]
modulate = Color( 0.313726, 0.129412, 0.819608, 1 )
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpDetector"]
shape = SubResource( 3 )

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]

[node name="JumpPlatformLight" type="Light2D" parent="."]
texture = ExtResource( 10 )
texture_scale = 3.53
shadow_enabled = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
position = Vector2( -2, -55 )
scale = Vector2( 11, 10 )
process_parent = true
physics_process_parent = true

[connection signal="body_entered" from="JumpDetector" to="." method="_on_JumpDetector_body_entered"]
